src/assets/css/index.scss
/* ... */
// responsive
@media screen and (max-width: 1440px) {
    #section0 .kv-content>h1 {
        width: 20%;
        left: 10%;
    }
    .apply-content .apply-box {
        padding: 2em;
    }
    #section2 .teacherSlick-txt {
        width: 40%;
    }
}

@media screen and (max-width: 1200px) {
    #section3 .content {
        width: 50%;
    }
    .shareLink .container {
        padding-top: 0;
    }
}

@media screen and (max-width: 1024px) {
    #section0 {
        background: url(../images/index/kv-bg-m.jpg) center no-repeat;
        background-size: cover;
        .kv-content>h1 {
            width: 50%;
            left: 5%;
            top: calc(5% + 70px);
        }
    }
    .section1-bg {
        background: url(../images/index/section1-bg-m.jpg) center no-repeat;
        background-size: cover;
    }
    .s1-title {
        width: 80%;
        margin: 5% auto;
        padding-left: 0;
        >h2 {
            width: 50%;
        }
    }
    .s1-content {
        width: 80%;
        padding: 0;
        margin: 0 auto;
    }
    .whale.hidden-desktop {
        width: 100%;
        padding: 38.25%;
        background: url(../images/index/whale.png) center no-repeat;
        background-size: cover;
        position: relative;
        margin-left: -10%;
    }
    .s1-2-content {
        max-width: 80%;
        margin: 0 auto;
        padding-bottom: 55%;
    }
    .s2-content {
        max-width: 80%;
        margin: 0 auto;
    }
    #section2 {
        .teacherSlick {
            margin: 5% 0;
            .slideCard.slick-active.slick-center {
                @include transform(scale(2));
            }
            .slideCard:before {
                width: 40px;
                height: 40px;
            }
            .slick-next {
                right: 20px;
            }
            .slick-prev {
                left: 20px;
            }
        }
        .teacherSlick-txt {
            width: 75%;
        }
    }
    #section3 {
        .hidden-desktop img {
            width: 100%;
        }
        .bg {
            background: none;
            margin-top: 0;
        }
        .content {
            width: 80%;
            margin-left: 0;
            padding: 0;
            margin-bottom: 0;
            margin: 7% auto;
        }
    }
}

@media screen and (max-width: 767px) {
    #section0 .kv-content>h1 {
        width: 40%;
    }
    .s1-title>h2 {
        width: 100%;
    }
    .s1-title,
    .s1-conten,
    .s1-2-content,
    .s2-content {
        max-width: 90%;
    }
    .apply-content .apply-box {
        width: 80%;
        margin: 5% auto;
        display: block;
        &:last-child {
            margin-right: auto;
        }
    }
    #section2 {
        .teacherSlick {
            .slick-list {
                padding: 0 !important;
                width: 75%;
                margin: 0 auto;
            }
            .slideCard.slick-active.slick-center {
                @include transform(scale(1));
            }
            .slick-prev,
            .slick-next {
                z-index: 10;
                width: 25px;
                height: 25px;
                background-color: #051468;
                border-radius: 50%;
                &:before,
                &:after {
                    background: #ffffff;
                }
            }
            .slick-next {
                right: 10px;
            }
            .slick-prev {
                left: 10px;
            }
        }
        .teacherSlick-txt {
            width: 90%;
        }
    }
}

